feat: convert functions into private methods

--- a/index.html
+++ b/index.html
@@ -12,6 +12,7 @@
     <script>
       const dp = new ViotDatePicker({
         selector: 'viot-dp',
+        date: new Date('03-27-1991'),
       });
     </script>
   </body>
