--- a/index.html
+++ b/index.html
@@ -7,6 +7,7 @@
     <script src="./index.js"></script>
   </head>
   <body>
+    <input type="date" />
     <div id="viot-dp"></div>
     <script>
       const dp = new ViotDatePicker({
