feat: render weekdays

--- a/index.html
+++ b/index.html
@@ -12,6 +12,7 @@
     <script>
       const dp = new ViotDatePicker({
         selector: 'viot-dp',
+        month: 'short',
       });
     </script>
   </body>
